--- a/neurips-2024/organizers/index.html
+++ b/neurips-2024/organizers/index.html
@@ -487,7 +487,7 @@ for time series prediction and has been a prominent contributor to open-source l
     
       <source class="responsive-img-srcset" srcset="/assets/img/organizers/pedro-480.webp 480w,/assets/img/organizers/pedro-800.webp 800w,/assets/img/organizers/pedro-1400.webp 1400w," sizes="(min-width: 930px) 270.0px, (min-width: 576px) 30vw, 95vw" type="image/webp">
     
-    <img src="/neurips-2024/assets/img/organizers/pedro.jpeg" class="img-fluid z-depth-1 rounded" width="100%" height="auto" alt="organizers/pedro.jpeg" loading="eager" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+    <img src="/neurips-2024/assets/img/organizers/pedro.jpg" class="img-fluid z-depth-1 rounded" width="100%" height="auto" alt="organizers/pedro.jpg" loading="eager" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
   </source></picture>
 
   
